// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Clipboard > should not render without children in variant type 'button' 1`] = `<DocumentFragment />`;

exports[`Clipboard > should not render without children in variant type 'icon' 1`] = `<DocumentFragment />`;

exports[`Clipboard > should render with children in variant type 'button' 1`] = `
<DocumentFragment>
  <div
    class="relative"
  >
    <button
      class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white"
      data-testid="clipboard-button__wrapper"
      type="button"
    >
      <div
        class="flex items-center space-x-2"
      >
        <span>
          Hello!
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Clipboard > should render with children in variant type 'icon' 1`] = `
<DocumentFragment>
  <button
    class="ring-focus relative focus:outline-none"
    data-ring-focus-margin="-m-1"
    data-testid="clipboard-icon__wrapper"
    type="button"
  >
    <span>
      Hello!
    </span>
  </button>
</DocumentFragment>
`;
